# aosp-virtual-camera

./: .gitignore  .mcp.json  CLAUDE.md  INTEGRATION.md  README.md  RENDERER_API.md  integrate.sh
.claude/commands/: adb.md  build.md  logcat.md  soong.md
aidl/: IVirtualCameraCallback.aidl  IVirtualCameraManager.aidl  IVirtualCameraService.aidl  StreamConfig.aidl  VirtualCameraConfig.aidl
apex/: Android.bp  README.md  apex_manifest.json  com.android.hardware.camera.provider.virtual.avbpubkey  com.android.hardware.camera.provider.virtual.pem  com.android.hardware.camera.provider.virtual.pk8  com.android.hardware.camera.provider.virtual.rc  com.android.hardware.camera.provider.virtual.x509.pem  file_contexts  generate_keys.sh
camera-test/app/: build.gradle.kts
hal/: Android.bp  VirtualCameraDevice.cpp  VirtualCameraDevice.h  VirtualCameraFrameSource.cpp  VirtualCameraFrameSource.h  VirtualCameraFrameSourceV2.cpp  VirtualCameraFrameSourceV2.h  VirtualCameraProvider.cpp  VirtualCameraProvider.h  VirtualCameraSession.cpp  VirtualCameraSession.h  VirtualCameraSocket.cpp  VirtualCameraSocket.h  android.hardware.camera.provider-virtual-service.xml  service.cpp
hal/aidl-v1/: Android.bp  VirtualCameraDevice.cpp  VirtualCameraProvider.h  VirtualCameraSession.cpp  android.hardware.camera.provider-virtual-service.rc  (+2 more)
renderer-lib/: VirtualCameraClient.cpp  VirtualCameraClient.h  VirtualCameraWriter.cpp  VirtualCameraWriter.h  build.gradle.kts
renderer-lib/src/main/cpp/: CMakeLists.txt  VirtualCameraRenderer.cpp  VirtualCameraRenderer.h  VirtualCameraRendererJni.cpp
sample-renderer/: README.md  settings.gradle.kts
sample-renderer/app/src/main/cpp/: CMakeLists.txt  cube_geometry.cpp  cube_geometry.h  shaders.h  vcam_renderer.cpp  vulkan_renderer.cpp  vulkan_renderer.h
sample-renderer/app/src/main/cpp/shaders/: cube.vert  vert_spv.h
scripts/: build.sh  integrate.sh  launch-cuttlefish.sh  test.sh
sepolicy/: README.md  file_contexts  hal_camera_virtual.te  hwservice_contexts  service.te  service_contexts  system_server.te  untrusted_app.te
service/: SystemServer.patch  SystemServerRegistration.java  VirtualCamera.java  VirtualCameraService.java
test-app/: README.md  settings.gradle.kts
unified-test/: README.md  settings.gradle.kts
unified-test/app/src/main/cpp/: CMakeLists.txt  gpu_renderer.cpp  gpu_renderer.h  unified_renderer.cpp  virtual_camera_writer.cpp  virtual_camera_writer.h  virtual_camera_writer_v2.cpp  virtual_camera_writer_v2.h  vulkan_cube.cpp
v2-shared-memory/: HalInterface.h  README.md  RendererInterface.h  SharedBufferPool.h
virtual-display/: README.md
virtual-mic/: README.md
(+63 files in other folders)
